<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="crea_aqui">Crea una aquí</string>
    <string name="email">Correo</string>
    <string name="username">Usuario</string>
    <string name="name">Nombre</string>
    <string name="ca_save">Únete</string>

    <string name="create_account">Crear cuenta</string>
    <string name="hace">Hace</string>
    <string name="me_gusta">Me gusta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="home">Home</string>
    <string name="transictionCardview">transitioncardview</string>
</resources>
