<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/size_10">

    <FrameLayout
        android:id="@+id/flContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/picture_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:scaleType="centerCrop"
            android:transitionName="@string/transictionCardview"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:background="#53292929">
            <TextView
                android:id="@+id/username_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:background="?attr/selectableItemBackground"
                android:text="uriel Ramirez"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/first_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/firstword_cad"
                    android:textColor="@color/colorWhite"
                    android:text="@string/hace"/>
                <TextView
                    android:id="@+id/time_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textSize="@dimen/firstword_cad"
                    android:textColor="@color/colorWhite"
                    android:text="4 días"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_10">
                <CheckBox
                    android:id="@+id/cblikeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>
                <TextView
                    android:id="@+id/like_number_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textSize="@dimen/firstword_cad"
                    android:textColor="@color/colorWhite"
                    android:text="@string/me_gusta"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>